# medical-doc-intelligence

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.automation_state/: day_01_summary.json  day_02_summary.json  day_03_summary.json  day_04_summary.json  day_05_summary.json  day_06_summary.json  day_07_summary.json  day_08_summary.json  day_09_summary.json  day_10_summary.json  day_11_summary.json  day_12_summary.json  day_13_summary.json  day_14_summary.json  day_15_summary.json  day_16_summary.json  day_17_summary.json  day_18_summary.json  day_19_summary.json  day_20_summary.json  day_21_summary.json  day_22_summary.json  day_23_summary.json  day_24_summary.json  day_25_summary.json  day_26_summary.json  day_27_summary.json  day_28_summary.json  day_29_summary.json  day_30_summary.json  run_log.txt
configs/: alerting_config.yaml  base_config.yaml  cache_config.yaml  celery_config.yaml  chromadb_config.yaml  chunking_config.yaml  classification_config.yaml  document_types.yaml  drift_config.yaml  embedding_config.yaml  entity_config.yaml  hallucination_config.yaml  monitoring_config.yaml  ollama_config.yaml  quality_config.yaml  query_config.yaml  response_config.yaml  search_config.yaml  security_config.yaml  session_config.yaml  summarization_config.yaml
docs/: api_reference.md  architecture.md  deployment_guide.md  hipaa_compliance.md  performance_report.md  quickstart.md
plan/: 30_day_plan.json
postman/: medical_doc_intelligence.json
scripts/: bootstrap_repo.py  daily_automator_template.py  (+4 more)
(+122 files in other folders)
