[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-doc-intelligence"
version = "0.1.0"
description = "LLM-powered medical document intelligence pipeline with RAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pymupdf>=1.23.7",
    "pytesseract>=0.3.10",
    "chromadb>=0.4.18",
    "ollama>=0.1.7",
    "httpx>=0.25.2",
    "celery[redis]>=5.3.4",
    "redis>=5.0.1",
    "asyncpg>=0.29.0",
    "prometheus-client>=0.19.0",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.6",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "sentence-transformers>=2.2.2",
    "rank-bm25>=0.2.2",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "nltk>=3.8.1",
    "spacy>=3.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "ruff>=0.1.7",
    "mypy>=1.7.1",
    "locust>=2.19.1",
    "bandit>=1.7.6",
    "pip-audit>=2.6.1",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E","F","I","N","W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
